# automation_locust_load

./: .env.example  .env.template  .gitignore  ACTION_PLAN.md  ERROR_REPORT_20260308.md  FINAL_STATUS_REPORT.md  FIX_IMPLEMENTATION_GUIDE.md  LOAD_TEST_DEBUG_SUMMARY.md  NEXT_STEPS.md  README.md  START_HERE.md  create_account.py  create_account_final.py  create_account_simple.py  create_fresh_account.py  debug_credentials.py  investigate_api.py  locust.conf  pyproject.toml  requirements.txt  run_locust_with_date.ps1  setup_credentials.py  test_credentials.py  test_env_load.py
.github/workflows/: ci.yml  manual-load-test.yml  nightly-endurance.yml
common/: __init__.py  auth.py  config.py
tests/: locustfile.py  test_api_performance.py  test_checkout_flow.py  test_endurance.py  test_smoke_load.py  test_spike_load.py
tests/integration/: test_endpoint_smoke.py
tests/unit/: conftest.py  test_auth.py  test_config.py  test_locust_users.py
